data/derived/comb/progs/unify/prog5937.ml.out
Characters 100-119:
  n -> let x_ = digitsOfInt n in sumList x_, incre i;;
                                 ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
